syntax = "proto3";

option java_package = "org.welbodipartnership.cradle5.data.settings";
option java_multiple_files = true;

message UnencryptedSettings {
  message AesGcmCiphertext {
    bytes data = 1;
    bytes iv = 2;
  }
  /* An encrypted Tink KeysetHandle for EncryptedSettings, wrapped with the Android KeyStore key. */
  AesGcmCiphertext wrapped_settings_key = 1;

  /* A key for the database, wrapped with the Android KeyStore key. */
  AesGcmCiphertext wrapped_database_key = 2;
}

message EncryptedSettings {
  /* The username of the currently logged-in user. */
  string username = 1;
  /* A hash of the user's login password, stored for authentication purposes. */
  bytes password_hash = 2;
}